# lambdy

./: LICENSE  README.md  lambdy.cabal  program.txt
app/: Main.hs
src/: Interpreter.hs  Parser.hs
test/: Spec.hs
