name:                lambdy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jbayardo/lambdy#readme
license:             BSD3
license-file:        LICENSE
author:              Julian Bayardo
maintainer:          julian@bayardo.info
copyright:           2016 Julian Bayardo
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Interpreter
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
                     , parsec
                     , containers
  default-language:    Haskell2010

executable lambdy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdy
  default-language:    Haskell2010

test-suite lambdy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambdy
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jbayardo/lambdy
